--- a/apps/web/src/components/TitleAndSearch/FilterButtons/FilterButtons.module.scss
+++ b/apps/web/src/components/TitleAndSearch/FilterButtons/FilterButtons.module.scss
@@ -23,6 +23,6 @@
   .active {
     font-weight: 700;
     color: var(--sea-blue);
-    background-color: #dbf2ff;
+    background-color: var(--off-white);
   }
 }
