--- a/apps/web/src/styles/globals.scss
+++ b/apps/web/src/styles/globals.scss
@@ -6,6 +6,7 @@
   --background: #f3f7ff;
   --black: #3a3a3a;
   --white: #fff;
+  --off-white: #dbf2ff;
   --middle-blue-grey: #80a0d4;
   --main-blue: #5f93f1;
   --sea-blue: #48afe8;
